[LRCQ-8652] Added doc, runnable jar, Eclipse project